<!--
  ~ Copyright 2020 aliceresponde. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="app_name" translatable="false">MemoryGame</string>
    <string name="text_lobby_title" translatable="false">Memory game</string>
    <string name="card_item_card_content_desc">Card</string>
    <!-- lobby screen -->
    <string name="text_lobby_home">New game</string>
    <string name="text_lobby_return">Back to lobby</string>
    <!-- difficulty selection bottom sheet -->
    <string name="text_difficulty_selection_title">Select difficulty</string>
    <string name="text_button_difficulty_very_easy">Very Easy</string>
    <string name="text_button_difficulty_easy">Easy</string>
    <string name="text_button_difficulty_normal">Normal</string>
    <string name="text_button_difficulty_hard">Hard</string>
    <!-- board screen -->
    <string name="text_board_label_level">Level:</string>
    <string name="text_board_label_level_value">@string/text_button_difficulty_hard</string>
    <string name="text_board_label_score">Score: %1$d</string>
    <string name="text_board_label_fails">"Fails: %1$d / %2$d"</string>
    <!-- game success screen -->
    <string name="text_game_success_title">You won</string>
    <string name="text_game_success_description">You have paired all the animal cards.</string>
    <!-- game failed screen -->
    <string name="text_game_failed_title">You lost</string>
    <string name="text_game_failed_description">You made mistakes while finding pairs of cards.</string>
    <string name="text_button_retry">Retry</string>
    <!-- texts for logging -->
    <string name="text_warning_game_state" translatable="false">Current state of the game: %1$s, score: %2$d/%3$d</string>
</resources>
