<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 aliceresponde. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_difficulty_selection">

    <TextView
        android:id="@+id/text_sheet_difficulty_selection_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_difficulty_selection_title"
        android:textSize="28sp"
        android:gravity="center"
        android:textColor="@color/brand_black"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toTopOf="@+id/guideline_difficulty_buttons_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_main_end"
        app:layout_constraintStart_toStartOf="@id/guideline_main_start"
        app:layout_constraintTop_toTopOf="@id/guideline_main_top"
        tools:viewBindingIgnore="true" />

    <Button
        android:id="@+id/button_level_very_easy"
        style="@style/Widget.MemoryGame.Lobby.Difficulty.Button"
        android:text="@string/text_button_difficulty_very_easy"
        app:layout_constraintEnd_toStartOf="@+id/button_level_easy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_difficulty_buttons_top" />

    <Button
        android:id="@+id/button_level_easy"
        style="@style/Widget.MemoryGame.Lobby.Difficulty.Button"
        android:text="@string/text_button_difficulty_easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_level_very_easy"
        app:layout_constraintTop_toBottomOf="@+id/guideline_difficulty_buttons_top" />

    <Button
        android:id="@+id/button_level_normal"
        style="@style/Widget.MemoryGame.Lobby.Difficulty.Button"
        android:text="@string/text_button_difficulty_normal"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_level_hard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_level_very_easy" />

    <Button
        android:id="@+id/button_level_hard"
        style="@style/Widget.MemoryGame.Lobby.Difficulty.Button"
        android:text="@string/text_button_difficulty_hard"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_level_normal"
        app:layout_constraintTop_toBottomOf="@id/button_level_easy" />


    <!-- guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_difficulty_buttons_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="72dp"
        tools:viewBindingIgnore="true" />


</androidx.constraintlayout.widget.ConstraintLayout>