<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 aliceresponde. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_board_label_level"
        style="@style/Widget.MemoryGame.Board.TextLabel"
        android:text="@string/text_board_label_level"
        app:layout_constraintStart_toEndOf="@id/guideline_main_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_main_top"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/text_board_label_score"
        style="@style/Widget.MemoryGame.Board.TextLabel.Score"
        android:text="@string/text_board_label_score"
        app:layout_constraintEnd_toStartOf="@id/guideline_main_end"
        app:layout_constraintTop_toTopOf="@+id/guideline_main_top" />

    <TextView
        android:id="@+id/text_board_label_fails"
        style="@style/Widget.MemoryGame.Board.TextLabel.Fails"
        android:text="@string/text_board_label_fails"
        app:layout_constraintEnd_toStartOf="@id/guideline_main_end"
        app:layout_constraintTop_toBottomOf="@id/text_board_label_score" />

    <TextView
        android:id="@+id/text_board_label_level_value"
        style="@style/Widget.MemoryGame.Board.TextLevelValue"
        app:layout_constraintStart_toEndOf="@id/guideline_main_start"
        app:layout_constraintTop_toBottomOf="@id/text_board_label_level"
        tools:text="@string/text_board_label_level_value" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_board_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/guideline_main_bottom"
        app:layout_constraintEnd_toStartOf="@id/guideline_main_end"
        app:layout_constraintStart_toEndOf="@id/guideline_main_start"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="16"
        tools:listitem="@layout/item_board_card"
        tools:spanCount="4" />

    <!-- guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        tools:viewBindingIgnore="true" />


</androidx.constraintlayout.widget.ConstraintLayout>