<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 aliceresponde. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/brand_carmine"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_main_bottom"
        app:layout_constraintEnd_toStartOf="@id/guideline_main_end"
        app:layout_constraintStart_toEndOf="@id/guideline_main_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_main_top">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view_success"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/failed_attempt"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/text_game_failed_title"
            android:layout_width="0dp"
            android:text="@string/text_game_failed_title"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/brand_white"
            android:textAppearance="@style/TextAppearance.MemoryGame.Lobby.Headline"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_view_success"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/text_game_failed_description"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_white"
            android:text="@string/text_game_failed_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_game_failed_title"
            tools:viewBindingIgnore="true" />

        <Button
            android:id="@+id/button_retry"
            style="@style/Widget.MemoryGame.Button.Borderless.Failed"
            android:text="@string/text_button_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_game_failed_description" />

        <Button
            android:id="@+id/button_home"
            style="@style/Widget.MemoryGame.Button.Borderless.Failed"
            android:text="@string/text_lobby_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_retry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        tools:viewBindingIgnore="true" />
</androidx.constraintlayout.widget.ConstraintLayout>